--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb+srv://api:5mq12asqWrYEqZza@cluster0.vy6yt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+  "ConnectionString": "mongodb+srv://<usuario>:<senha>@cluster0.vy6yt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
   "NomeBanco": "coronavirus"
 }
